Added Motion tracking rectangle annotations

--- a/Visualiser/packages.config
+++ b/Visualiser/packages.config
@@ -3,4 +3,5 @@
   <package id="AForge" version="2.2.5" targetFramework="net452" />
   <package id="AForge.Video" version="2.2.5" targetFramework="net452" />
   <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net452" />
+  <package id="OpenCvSharp3-AnyCPU" version="3.4.1.20180319" targetFramework="net452" />
 </packages>
