--- a/Visualiser/packages.config
+++ b/Visualiser/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AForge" version="2.2.5" targetFramework="net452" />
-  <package id="AForge.Video" version="2.2.5" targetFramework="net452" />
-  <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net452" />
-  <package id="OpenCvSharp3-AnyCPU" version="3.4.1.20180319" targetFramework="net452" />
+  <package id="Accord" version="3.8.0" targetFramework="net452" />
+  <package id="Accord.Video" version="3.8.0" targetFramework="net452" />
+  <package id="Accord.Video.DirectShow" version="3.8.0" targetFramework="net452" />
+  <package id="Accord.Video.FFMPEG" version="3.8.0" targetFramework="net452" />
 </packages>
